--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -72,7 +72,7 @@ body {
     align-items: center;
     border: 1px solid $color_principal;
     border-radius: 1rem;
-    margin: 0 0 3rem 0;
+    margin: 1rem 3% 2rem;
 
     h4 {
         cursor: pointer;
