--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -8,6 +8,8 @@ $color_negro: #24252A;
 $color_blanco: #edf0f1;
 $color_principal: rgba(0, 136, 169, 1);
 $parallax-bg-image: url('../img/sections/img-absolute.jpg');
+$font_roboto: 'Roboto Serif', serif;
+$font_montserrat: 'Montserrat', serif;
 
 @import 'header';
 @import 'beadcrumb';
