Se modifica el footer en las vistas

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: $color_negro;
-
+    font-family: $font_montserrat;
     .texto-nav-footer {
         color: $color_blanco;
     }
