--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -204,6 +204,51 @@ body {
     }
 }
 
+.form-group {
+    width: 100%;
+}
+
+.contenedor-contacto {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem auto;
+    align-items: center;
+    font-family: $font_montserrat;
+}
+
+.section-contacto {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 2.5% 5%;
+
+    form {
+        flex: 1;
+        max-width: 600px;
+    }
+
+    .iframe {
+        
+        flex: 1; 
+        max-width: 600px;
+
+        iframe {
+            width: 100%;
+            height: 350px;
+        }
+    }
+
+    @media (max-width: 768px) {
+        flex-direction: column; 
+        
+        form, .iframe {
+            max-width: 100%;
+        }
+        
+    }
+    
+}
+
 @media (max-width: 998px) {
     .d-flex {
         margin: 0 auto;
