--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -216,6 +216,13 @@ body {
     font-family: $font_montserrat;
 }
 
+.section-login {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1%;
+}
+
 .section-contacto {
     display: flex;
     flex-wrap: wrap;
