--- a/css/_cards.scss
+++ b/css/_cards.scss
@@ -265,7 +265,6 @@
 .info-marca {
     display: flex;
     max-width: 1200px;
-    margin: 0 auto;
     gap: 1rem;
     font-family: $font_montserrat;
 
@@ -289,5 +288,12 @@
         img {
             width: 300px;
         }
+    }
+}
+.reverse {
+    flex-direction: row-reverse;
+
+    @media (max-width: 992px) {
+        flex-direction: column;
     }
 }
