--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -53,13 +53,14 @@ body {
     text-decoration: underline;
     transition: transform 0.3s ease;
 }
+
 .texto-subrayado:hover {
-    transform: scale(1.1); 
+    transform: scale(1.1);
 }
 
 .centrar-h {
-    margin-right: auto!important;
-    margin-left: auto!important;
+    margin-right: auto !important;
+    margin-left: auto !important;
 }
 
 .contenido {
@@ -221,9 +222,80 @@ body {
         gap: 1rem;
         margin: 1%;
     }
-    
+
     .section-registro {
-        
+        display: flex;
+        gap: 3rem;
+        margin-top: 3%;
+        margin: 0 5%;
+
+        aside {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            .social-icons {
+                list-style: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                padding: 0;
+
+                li {
+                    margin: 1rem 10px;
+
+                    a {
+                        display: block;
+                        font-size: 24px;
+                        color: #333;
+                        text-decoration: none;
+
+                        &:hover {
+
+                            &.facebook {
+                                color: #1877f2;
+                            }
+
+                            &.twitter {
+                                color: #1da1f2;
+                            }
+
+                            &.instagram {
+                                color: #c13584;
+                            }
+
+                            &.github {
+                                color: #181717; // Color de GitHub
+                            }
+
+                            &.google {
+                                color: #DB4437; // Color de Google
+                            }
+
+                            &.youtube {
+                                color: #FF0000; // Color de YouTube
+                            }
+
+                            &.linkedin {
+                                color: #0A66C2; // Color de LinkedIn
+                            }
+                        }
+                    }
+                }
+
+                @media (max-width: 768px) {
+                    .social-icons {
+                        li {
+                            margin: 0 5px;
+                        }
+                    }
+                }
+            }
+        }
+
+        @media (max-width: 768px) {
+            flex-direction: column;
+        }
     }
 }
 
@@ -240,8 +312,8 @@ body {
     }
 
     .iframe {
-        
-        flex: 1; 
+
+        flex: 1;
         max-width: 600px;
 
         iframe {
@@ -251,14 +323,15 @@ body {
     }
 
     @media (max-width: 768px) {
-        flex-direction: column; 
-        
-        form, .iframe {
+        flex-direction: column;
+
+        form,
+        .iframe {
             max-width: 100%;
         }
-        
+
     }
-    
+
 }
 
 @media (max-width: 998px) {
@@ -354,6 +427,7 @@ body {
             // margin: 1% 2%;
             padding: 5rem;
             gap: 1rem;
+
             img {
                 width: 100%;
                 height: auto;
