--- a/css/estilos.css
+++ b/css/estilos.css
@@ -637,17 +637,43 @@ body {
   margin-top: 3%;
   margin: 0 5%;
 }
+.contenedor-contacto .section-registro form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 3%;
+}
+.contenedor-contacto .section-registro form .form-group {
+  flex: 1 1 calc(50% - 0.5rem);
+}
+.contenedor-contacto .section-registro form .form-group.region-comuna {
+  flex: 1 1 100%;
+}
+.contenedor-contacto .section-registro form .form-group.direccion {
+  flex: 1 1 100%;
+}
+.contenedor-contacto .section-registro form .form-group.boton {
+  flex: 1 1 100%;
+  text-align: right;
+}
+@media (max-width: 768px) {
+  .contenedor-contacto .section-registro form {
+    flex-direction: column;
+  }
+}
 .contenedor-contacto .section-registro aside {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .contenedor-contacto .section-registro aside .social-icons {
-  list-style: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0;
+  list-style: none;
 }
 .contenedor-contacto .section-registro aside .social-icons li {
   margin: 1rem 10px;
@@ -682,6 +708,9 @@ body {
 @media (max-width: 768px) {
   .contenedor-contacto .section-registro aside .social-icons .social-icons li {
     margin: 0 5px;
+  }
+  .contenedor-contacto .section-registro aside .social-icons .social-icons li a {
+    font-size: 16px;
   }
 }
 @media (max-width: 768px) {
