--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -229,17 +229,47 @@ body {
         margin-top: 3%;
         margin: 0 5%;
 
+        form {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            align-items: flex-start;
+            justify-content: space-between;
+            margin: 3%;
+
+            .form-group {
+                flex: 1 1 calc(50% - 0.5rem);
+            }
+        
+            .form-group.region-comuna {
+                flex: 1 1 100%; 
+            }
+        
+            .form-group.direccion {
+                flex: 1 1 100%;
+            }
+        
+            .form-group.boton {
+                flex: 1 1 100%;
+                text-align: right;
+            }
+
+            @media (max-width: 768px) {
+                flex-direction: column;
+            }
+        }
+
         aside {
             display: flex;
             flex-direction: column;
             gap: 1rem;
 
             .social-icons {
-                list-style: none;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 padding: 0;
+                list-style: none;
 
                 li {
                     margin: 1rem 10px;
@@ -287,6 +317,10 @@ body {
                     .social-icons {
                         li {
                             margin: 0 5px;
+
+                            a {
+                                font-size: 16px;
+                            }
                         }
                     }
                 }
